Resolved issue with flash messages not displaying due to heading overlaying it (z-index)

--- a/website/static/css/styles.css
+++ b/website/static/css/styles.css
@@ -18,6 +18,10 @@ body {
     }
 }
 
+#messageDiv {
+    margin-top: 55px;
+}
+
 #mainNav {
     position: fixed;
     width: 100vw;
